# akata-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: addresses.py  auth.py  orders.py  users.py  wallet.py
app/core/: config.py  exceptions.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  address.py  order.py  user.py  wallet.py
app/repositories/: address_repo.py  base.py  order_repo.py  user_repo.py  wallet_repo.py
app/schemas/: address.py  auth.py  common.py  order.py  user.py  wallet.py
app/services/: auth_service.py  order_service.py  wallet_service.py
tests/: conftest.py
tests/test_api/: test_auth.py
